FB Profile pic added to screens

--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -192,6 +192,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="zipcodeButtonOutlet" destination="sZ9-uR-8Ys" id="lvW-rl-pbz"/>
                         <outlet property="zipcodeField" destination="U1L-JP-9lR" id="IMG-gc-eEj"/>
                         <segue destination="maK-rD-6h8" kind="show" identifier="zipcodeToTabBar" id="A9u-F2-sNF"/>
                         <segue destination="aea-Hc-XXF" kind="show" identifier="zipcodeToStart" id="OKq-df-Zzw"/>
@@ -398,21 +399,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Requested By:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dnX-aj-CjA">
-                                <rect key="frame" x="130" y="172" width="340" height="35"/>
+                                <rect key="frame" x="130" y="147" width="340" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="yTh-Wo-iaa"/>
-                                    <constraint firstAttribute="width" constant="340" id="zrd-0Y-TmA"/>
+                                    <constraint firstAttribute="height" constant="35" id="VAC-ul-0hC"/>
+                                    <constraint firstAttribute="width" constant="340" id="p74-rf-ySe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GD6-5m-mIt">
-                                <rect key="frame" x="238" y="410" width="125" height="40"/>
+                                <rect key="frame" x="238" y="460" width="125" height="40"/>
                                 <color key="backgroundColor" red="0.18039215689999999" green="0.80000000000000004" blue="0.4431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="125" id="2f3-VU-c8n"/>
-                                    <constraint firstAttribute="height" constant="40" id="Ju9-UA-EwB"/>
+                                    <constraint firstAttribute="height" constant="40" id="IbM-nL-kwA"/>
+                                    <constraint firstAttribute="width" constant="125" id="Lba-5f-NBR"/>
                                 </constraints>
                                 <state key="normal" title="Button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -422,66 +423,83 @@
                                     <action selector="acceptButton:" destination="eXi-he-5LQ" eventType="touchUpInside" id="5GU-r6-qAx"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRj-3b-upE">
-                                <rect key="frame" x="130" y="207" width="340" height="35"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="340" id="btq-gP-11f"/>
-                                    <constraint firstAttribute="height" constant="35" id="hyI-Bm-heE"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lyq-aN-cHd">
-                                <rect key="frame" x="150" y="100" width="300" height="79"/>
+                                <rect key="frame" x="150" y="75" width="300" height="79"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="79" id="9Zd-Yg-YpJ"/>
-                                    <constraint firstAttribute="width" constant="300" id="WmF-Gq-7fZ"/>
+                                    <constraint firstAttribute="width" constant="300" id="4ev-Pn-5X0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d8s-Cb-Ct8">
-                                <rect key="frame" x="150" y="274" width="300" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="300" id="RMf-Wd-YY4"/>
-                                    <constraint firstAttribute="height" constant="128" id="Wk9-QQ-lqp"/>
-                                </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <rect key="frame" x="16" y="324" width="568" height="128"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Wu-bi-f3u">
-                                <rect key="frame" x="130" y="246" width="340" height="35"/>
+                                <rect key="frame" x="130" y="296" width="340" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="JdF-J7-6b7"/>
-                                    <constraint firstAttribute="width" constant="340" id="Lw3-hh-ByD"/>
+                                    <constraint firstAttribute="height" constant="35" id="9o0-Lv-QOc"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6jm-vY-hdn">
+                                <rect key="frame" x="280" y="213" width="40" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Ju-b6-kB1">
+                                <rect key="frame" x="16" y="190" width="248" height="105"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="vRj-3b-upE">
+                                <rect key="frame" x="304" y="190" width="280" height="105"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="105" id="fuD-0O-ERG"/>
+                                    <constraint firstAttribute="width" constant="280" id="mtI-SA-lu7"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.17254901959999999" green="0.24313725489999999" blue="0.31372549020000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="d8s-Cb-Ct8" secondAttribute="centerX" id="63R-iA-E1W"/>
-                            <constraint firstAttribute="centerX" secondItem="GD6-5m-mIt" secondAttribute="centerX" constant="-0.5" id="6r4-r3-zBZ"/>
-                            <constraint firstAttribute="centerX" secondItem="dnX-aj-CjA" secondAttribute="centerX" id="9IV-fS-epB"/>
-                            <constraint firstItem="lyq-aN-cHd" firstAttribute="top" secondItem="hjz-Nh-I7B" secondAttribute="bottom" constant="36" id="Cdz-eL-ZGQ"/>
-                            <constraint firstItem="GD6-5m-mIt" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="168" id="DgZ-Nz-AS5"/>
-                            <constraint firstItem="dnX-aj-CjA" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="-7" id="RVC-3n-ERX"/>
-                            <constraint firstAttribute="centerX" secondItem="vRj-3b-upE" secondAttribute="centerX" id="U5A-3E-rbf"/>
-                            <constraint firstItem="vRj-3b-upE" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="28" id="eHL-LF-TDW"/>
-                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="top" secondItem="6Wu-bi-f3u" secondAttribute="bottom" constant="-7" id="kUV-w1-4pN"/>
-                            <constraint firstAttribute="centerX" secondItem="6Wu-bi-f3u" secondAttribute="centerX" id="sbv-c5-CRA"/>
-                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="32" id="v16-yI-d2b"/>
-                            <constraint firstAttribute="centerX" secondItem="lyq-aN-cHd" secondAttribute="centerX" id="vmP-5j-vmx"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="leading" secondItem="ZbO-yJ-d73" secondAttribute="leadingMargin" id="0ze-O9-a6u"/>
+                            <constraint firstItem="vRj-3b-upE" firstAttribute="top" secondItem="lyq-aN-cHd" secondAttribute="bottom" constant="36" id="43X-Y3-qiB"/>
+                            <constraint firstItem="vRj-3b-upE" firstAttribute="top" secondItem="dnX-aj-CjA" secondAttribute="bottom" constant="8" id="4LK-Pa-KpR"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="29" id="4e4-Kh-rut"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="centerX" secondItem="6Wu-bi-f3u" secondAttribute="centerX" id="5Pd-eF-uoT"/>
+                            <constraint firstItem="6Wu-bi-f3u" firstAttribute="top" secondItem="6Ju-b6-kB1" secondAttribute="bottom" constant="1" id="9Me-in-Eox"/>
+                            <constraint firstItem="GD6-5m-mIt" firstAttribute="top" secondItem="d8s-Cb-Ct8" secondAttribute="bottom" constant="8" id="B5i-8q-KeW"/>
+                            <constraint firstItem="dnX-aj-CjA" firstAttribute="trailing" secondItem="6Wu-bi-f3u" secondAttribute="trailing" id="L3f-Of-koE"/>
+                            <constraint firstItem="6Wu-bi-f3u" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="bottom" constant="1" id="M4I-RR-xL1"/>
+                            <constraint firstItem="6Ju-b6-kB1" firstAttribute="leading" secondItem="ZbO-yJ-d73" secondAttribute="leadingMargin" id="MKl-oN-1l2"/>
+                            <constraint firstItem="6jm-vY-hdn" firstAttribute="centerX" secondItem="dnX-aj-CjA" secondAttribute="centerX" id="PZ7-Qy-i9x"/>
+                            <constraint firstItem="vRj-3b-upE" firstAttribute="leading" secondItem="6jm-vY-hdn" secondAttribute="trailing" constant="-16" id="RCa-6R-RLk"/>
+                            <constraint firstAttribute="centerX" secondItem="GD6-5m-mIt" secondAttribute="centerX" id="YhM-vB-e2f"/>
+                            <constraint firstItem="d8s-Cb-Ct8" firstAttribute="trailing" secondItem="ZbO-yJ-d73" secondAttribute="trailingMargin" id="Zbm-JD-Vax"/>
+                            <constraint firstItem="6Wu-bi-f3u" firstAttribute="leading" secondItem="6Ju-b6-kB1" secondAttribute="trailing" constant="-134" id="ayD-1F-Ufk"/>
+                            <constraint firstItem="dnX-aj-CjA" firstAttribute="centerX" secondItem="lyq-aN-cHd" secondAttribute="centerX" id="cyE-c2-qQi"/>
+                            <constraint firstItem="dnX-aj-CjA" firstAttribute="leading" secondItem="6Ju-b6-kB1" secondAttribute="trailing" constant="-134" id="jwR-KD-GPl"/>
+                            <constraint firstItem="6Wu-bi-f3u" firstAttribute="top" secondItem="6jm-vY-hdn" secondAttribute="bottom" constant="53" id="l4e-ET-yAI"/>
+                            <constraint firstItem="6Ju-b6-kB1" firstAttribute="top" secondItem="vRj-3b-upE" secondAttribute="top" id="mRS-5e-VgS"/>
+                            <constraint firstItem="6jm-vY-hdn" firstAttribute="leading" secondItem="6Ju-b6-kB1" secondAttribute="trailing" constant="16" id="oz5-qM-nPm"/>
+                            <constraint firstItem="KOK-Ws-14R" firstAttribute="top" secondItem="GD6-5m-mIt" secondAttribute="bottom" constant="51" id="pZd-cc-iha"/>
+                            <constraint firstAttribute="centerX" secondItem="d8s-Cb-Ct8" secondAttribute="centerX" id="rcL-kM-S9v"/>
+                            <constraint firstItem="dnX-aj-CjA" firstAttribute="top" secondItem="hjz-Nh-I7B" secondAttribute="bottom" constant="83" id="rvq-2S-3Pf"/>
+                            <constraint firstItem="lyq-aN-cHd" firstAttribute="top" secondItem="hjz-Nh-I7B" secondAttribute="bottom" constant="11" id="tIY-Yi-evb"/>
+                            <constraint firstItem="6jm-vY-hdn" firstAttribute="top" secondItem="dnX-aj-CjA" secondAttribute="bottom" constant="31" id="tQH-Jm-WFM"/>
+                            <constraint firstItem="vRj-3b-upE" firstAttribute="trailing" secondItem="ZbO-yJ-d73" secondAttribute="trailingMargin" id="tdl-PW-vy9"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="acceptButtonOutlet" destination="GD6-5m-mIt" id="OjL-oh-XRc"/>
+                        <outlet property="imageViewOutlet" destination="6Ju-b6-kB1" id="qkX-qh-srv"/>
                         <outlet property="nameLabel" destination="vRj-3b-upE" id="gsj-Dv-ybi"/>
                         <outlet property="taskNameLabel" destination="lyq-aN-cHd" id="STq-by-PwT"/>
                         <outlet property="textViewOutlet" destination="d8s-Cb-Ct8" id="e8U-kv-FkN"/>
@@ -1257,7 +1275,7 @@
         <image name="helpr" width="450" height="174"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="rJU-rD-EcA"/>
-        <segue reference="Ibn-0L-JYp"/>
+        <segue reference="OKq-df-Zzw"/>
+        <segue reference="A9u-F2-sNF"/>
     </inferredMetricsTieBreakers>
 </document>
